# pgator

./: .gitignore  .test.sh  .test_pgator.conf  .test_pgator_rpc_table.sql  .travis-json_rpc.sql  .travis-pgator.conf  .travis.yml  Dockerfile  LICENSE  README.md  app.html  bakeVersions.sh  bufflog.html  client.client.html  client.rpcapi.html  client.test.simple.html  client.test.testcase.html  current-pgator.version  daemon.html  db.async.pool.html  db.async.respond.html  db.async.transaction.html  db.async.workers.closed.html  db.async.workers.connecting.html  db.async.workers.free.html  db.async.workers.handler.html  db.async.workers.query.html  db.asyncPool.html  db.connection.html  db.pool.html  db.pq.api.html  db.pq.connection.html  db.pq.libpq.html  db.pq.types.array.html  db.pq.types.conv.html  db.pq.types.geometric.html  db.pq.types.inet.html  db.pq.types.numeric.html  db.pq.types.oids.html  db.pq.types.plain.html  (+24 more)
Debian/: README.md  build.sh  pgator.conf
Debian/DEBIAN/: conffiles  dirs  postinst  postrm  prerm
Debian/etc/: pgator.conf
Docker/build_env/: Dockerfile  README.md  build.sh
Docker_Build/: README.md  docker-compose.yml  docker-entrypoint.sh  migrate-db.sql  pgator.conf
Docker_Debian/: Dockerfile  README.md  docker-entrypoint.sh  pgator.conf
app/: Main.hs  Settings.hs
docs/log/: logInfo.html
source/: app.d  bufflog.d  cache.d  call_table.d  config.d  daemon.d  database.d  hexconv.d  log.d  production.d  server.d  sql_json.d  sql_transaction.d  sqltransaction.d  stdlog.d  table.d  terminal.d  testclient.d  util.d
source/client/: client.d  (+1 more)
(+101 files in other folders)
